add the white background to the right area within survey steps custom prompts

--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -89,7 +89,7 @@
       background-color: $app-background;
     }
 
-    td.content {
+    td.content,td.right {
       background-color: #fff;
     }
     label {
