--- a/www/blocks/page/_survey-step-multi.scss
+++ b/www/blocks/page/_survey-step-multi.scss
@@ -2,6 +2,9 @@
   // primary container with all of the main items.
   background-color: darken($survey-step-inset-block-background-color, 10%);
 
+  &.text-container {
+    background-color: white;
+  }
   .survey-step-item {
     margin-top: $global-form-control-padding;
     box-shadow: 0 1px 0 0 darken($survey-step-inset-block-background-color, 25%);
