add base history icon

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -62,6 +62,10 @@
     background-image: url("../img/icon/campaign.svg");
   }
 
+  &.history {
+    background-image: url("../img/icon/history.svg");
+  }
+
   &.stream {
     background-image: url("../img/icon/stream.svg");
   }
