--- a/www/blocks/component/_nav_list.scss
+++ b/www/blocks/component/_nav_list.scss
@@ -82,3 +82,92 @@ nav.list {
 
   }
 }
+
+nav.list-headers {
+  background-color: $component-background-color;
+  > ul {
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    > li .header.item {
+        padding: 0.8rem 1rem;
+        font-weight: bold;
+    }
+    > li .active.item {
+
+      border-bottom: 1px solid $app-list-border-color;
+      box-shadow: $app-list-box-shadow;
+
+      &:first-child {
+        border-top: 1px solid $app-list-border-color;
+      }
+
+      &:hover {
+        background-color: $app-list-hover-background-color
+      }
+
+    }
+
+    li .active.item {
+
+      @include -clearfix;
+
+      div.action {
+        padding: 0.8rem 1rem;
+        float: left;
+        width: 1.5rem;
+        height: 1.5rem;
+        .icon {
+          width: 1.5rem;
+          height: 1.5rem;
+          background-size: 1.5rem;
+          &.navigate {
+            background-position: left;
+            background-size: 1.5rem 1.5rem;
+          }
+        }
+      }
+
+      div.action + div.action, div.action.right {
+        float: right;
+        padding-left: 0rem;
+        margin-right: 1rem;
+      }
+
+      div.action + div.action + div.action {
+        display: none; /* not allowed more than two actions currently */
+      }
+
+      div.action:first-child:not(.right) ~ [role="link"] {
+        margin-left: 1.5rem + $app-main-padding;
+      }
+
+      div.action + div.action + [role="link"], div.action.right + [role="link"] {
+        margin-right: 1.5rem + $app-main-padding;
+      }
+
+      [role="link"] {
+        padding: $app-main-footer-padding;
+        overflow-x: hidden;
+      }
+
+    }
+
+    h3 {
+      font-weight: bold;
+      font-size: 0.9rem;
+    }
+    h3, p {
+      margin: 0;
+    }
+    p {
+      font-size: 0.8rem;
+      small {
+        font-size: 1em;
+      }
+    }
+
+  }
+}
