make history LI styling apply only to .active.item

--- a/www/blocks/page/_history.scss
+++ b/www/blocks/page/_history.scss
@@ -19,7 +19,7 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    > li {
+    > li .active.item {
       border-bottom: 1px solid $app-list-border-color;
       &.empty {
         font-style: italic;
