--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -102,6 +102,18 @@
     background-image: url("../img/icon/edit.svg");
   }
 
+  &.new-item {
+    background-image: url("../img/icon/eqis/new-item.svg");
+  }
+
+  &.new-assessment {
+    background-image: url("../img/icon/eqis/new-assessment.svg");
+  }
+
+  &.new-instruction {
+    background-image: url("../img/icon/eqis/new-instruction.svg");
+  }
+
   &.delete, &.save, &.info {
     background-size: 40px;
   }
