style link list text

--- a/www/blocks/page/_dashboard_eqis.scss
+++ b/www/blocks/page/_dashboard_eqis.scss
@@ -27,3 +27,9 @@
     text-align: right;
     width: $col-artifacts-width;
   }
+  .list {
+    [role="link"] {
+      text-transform: uppercase;
+    }
+  }
+}
