style response count icon

--- a/www/blocks/page/_dashboard_eqis.scss
+++ b/www/blocks/page/_dashboard_eqis.scss
@@ -31,5 +31,17 @@
     [role="link"] {
       text-transform: uppercase;
     }
+    .response-count {
+      border: none;
+      background-color: transparent;
+      background-image: url("../img/icon/eqis/folder.svg");
+      background-repeat: no-repeat;
+      background-size: 2.8*$app-main-footer-padding;
+      padding-left: 2*$app-main-footer-padding;
+      padding-right: 2*$app-main-footer-padding;
+      padding-top: 0.7*$app-main-footer-padding;
+      padding-bottom: 0.4*$app-main-footer-padding;
+      background-position: center center;
+    }
   }
 }
