--- a/www/blocks/page/_dashboard_eqis.scss
+++ b/www/blocks/page/_dashboard_eqis.scss
@@ -43,5 +43,13 @@
       padding-bottom: 0.4*$app-main-footer-padding;
       background-position: center center;
     }
+    .col-artifacts,.col-collected {
+      min-height: 2.5*$app-main-footer-padding;
+    }
+    .col-artifacts .new-assessment, .col-artifacts .new-instruction {
+      width: 2*$app-main-footer-padding;
+      height: 2*$app-main-footer-padding;
+      background-size: 2*$app-main-footer-padding;
+    }
   }
 }
