add trailing notice styling

--- a/www/blocks/page/_surveys.scss
+++ b/www/blocks/page/_surveys.scss
@@ -32,4 +32,9 @@
       background-size: 1.25rem;
     }
   }
+  .trailing-notice {
+    padding: 1rem;
+    margin: 0;
+    p { margin: 0; }
+  }
 }
