add scale factor to scale specific UI elements, defaults to 1

--- a/www/blocks/config/_app.scss
+++ b/www/blocks/config/_app.scss
@@ -1,3 +1,5 @@
+$scale-factor: 1 !default;
+
 $app-header-height: 3rem !default;
 $app-header-image-size: 1.4rem !default;
 $app-header-font-size: 1.0rem !default;
