make status bar offset a !default value

--- a/www/blocks/config/_app.scss
+++ b/www/blocks/config/_app.scss
@@ -41,4 +41,4 @@ $app-main-padding: 1rem !default;
 $app-main-footer-padding: $app-main-padding !default;
 $app-main-footer-font-size: 0.8rem !default;
 
-$app-status-bar-offset: 20px
+$app-status-bar-offset: 20px !default;
