make component attributes !default

--- a/www/blocks/config/_component.scss
+++ b/www/blocks/config/_component.scss
@@ -3,8 +3,8 @@ $component-slide-out-width-fallback: 40% !default;
 $component-header-background-color: #fff !default; // different from a page header
 $component-background-color: #fff !default;
 
-$component-loader-width: 150px;
-$component-loader-height: 200px;
+$component-loader-width: 150px !default;
+$component-loader-height: 200px !default;
 
-$component-blocker-width: 300px;
-$component-blocker-height: 420px;
+$component-blocker-width: 300px !default;
+$component-blocker-height: 420px !default;
