make survey step attributes into defaults

--- a/www/blocks/config/_page.scss
+++ b/www/blocks/config/_page.scss
@@ -20,8 +20,11 @@ $survey-step-inset-block-border-color: #2d9ce3 !default;
 
 $list-icon-size: 2rem !default;
 
-$survey-step-prev-button-background-color: #e76453;
-$survey-step-next-button-background-color: #56c68a;
-$survey-step-skip-button-background-color: #dbdbdb;
+$survey-step-prev-button-background-color: #e76453 !default;
+$survey-step-next-button-background-color: #56c68a !default;
+$survey-step-skip-button-background-color: #dbdbdb !default;
+
+$survey-step-skip-button-font-color: #666666 !default;
+
 
 $survey-step-skip-button-font-color: #666666;
