add survey step number control gradient variable

--- a/www/blocks/config/_page.scss
+++ b/www/blocks/config/_page.scss
@@ -26,5 +26,7 @@ $survey-step-skip-button-background-color: #dbdbdb !default;
 
 $survey-step-skip-button-font-color: #666666 !default;
 
+$survey-step-number-control-gradient: linear-gradient(to bottom, #47c4ff 0%, #00aeff 100%);
+
 
 $survey-step-skip-button-font-color: #666666;
