add styling for history app header icon, same size as hamburger menu icons

--- a/www/blocks/page/_history.scss
+++ b/www/blocks/page/_history.scss
@@ -14,13 +14,15 @@
     }
   }
 
-
   #list-region > ul {
     list-style: none;
     margin: 0;
     padding: 0;
     > li .active.item {
       border-bottom: 1px solid $app-list-border-color;
+      .type-icon {
+        font-size: $app-header-menu-header-icon-size;
+      }
       &.empty {
         font-style: italic;
         color: #777;
