--- a/www/blocks/page/_history.scss
+++ b/www/blocks/page/_history.scss
@@ -14,6 +14,15 @@
     }
   }
 
+  .list-controls {
+    padding: 0 $global-form-control-padding*2;
+    & > div {
+      padding: $global-form-control-padding*2 0;
+      width: 49.5%;
+      display: inline-block;
+    }
+  }
+
   #list-region > ul {
     list-style: none;
     margin: 0;
