--- a/www/blocks/component/_full-modal.scss
+++ b/www/blocks/component/_full-modal.scss
@@ -40,6 +40,22 @@
     margin-top: $app-header-image-size*2;
   }
 
+  // transition effects
+
+  visibility: hidden;
+  -webkit-transform: translateY(-100%);
+  transform: translateY(-100%);
+  -webkit-transition: -webkit-transform 0.4s ease-in-out, visibility 0s 0.4s;
+  transition: transform 0.4s ease-in-out, visibility 0s 0.4s;
+
+  &.open {
+    visibility: visible;
+    -webkit-transform: translateY(0%);
+    transform: translateY(0%);
+    -webkit-transition: -webkit-transform 0.4s ease-in-out;
+    transition: transform 0.4s ease-in-out;
+  }
+
 }
 
 
