--- a/www/blocks/config/_app.scss
+++ b/www/blocks/config/_app.scss
@@ -25,9 +25,9 @@ $app-header-border-color: #aaa !default;
 
 $app-footer-background-color: #555 !default;
 
-$app-header-background-flat: #262626;
+$app-header-background-flat: #262626 !default;
 $app-header-background: #262626 linear-gradient(to bottom, #202020 0%, #2a2a2a 30%, #2a2a2a 70%, #202020 100%) !default;
-$app-header-font-color: white;
+$app-header-font-color: white !default;
 
 $app-list-border-color: #ddd !default;
 $app-list-box-shadow: inset 0 2px 2px rgba(0,0,0,.05) !default;
