--- a/www/blocks/custom/va/site/_survey-step-horizontal.scss
+++ b/www/blocks/custom/va/site/_survey-step-horizontal.scss
@@ -13,6 +13,23 @@
       display: none;
     }
 
+    input + label.dummy-styled-radio {
+      display: inline-block !important;
+      border-radius: 50%;
+      border: 1px solid black;
+      background: -webkit-linear-gradient(-45deg, #ffffff 0%, #c2c2c2 100%);
+      background: -moz-linear-gradient(-45deg, #ffffff 0%, #c2c2c2 100%);
+      background: -o-linear-gradient(-45deg, #ffffff 0%, #c2c2c2 100%);
+      background: -ms-linear-gradient(-45deg, #ffffff 0%, #c2c2c2 100%);
+      background: linear-gradient(135deg, #ffffff 0%, #c2c2c2 100%);
+
+      padding: 0;
+
+      width: $radio-size;
+      height: $radio-size;
+
+    }
+
 
   }
 
