--- a/www/blocks/custom/va/site/_survey-step-horizontal.scss
+++ b/www/blocks/custom/va/site/_survey-step-horizontal.scss
@@ -30,6 +30,13 @@
 
     }
 
+    input:checked + label.dummy-styled-radio {
+      background: -webkit-linear-gradient(-45deg, #024e75 0%, #ffffff 0%, #676767 0%, #000000 100%);
+      background: -moz-linear-gradient(-45deg, #024e75 0%, #ffffff 0%, #676767 0%, #000000 100%);
+      background: -o-linear-gradient(-45deg, #024e75 0%, #ffffff 0%, #676767 0%, #000000 100%);
+      background: -ms-linear-gradient(-45deg, #024e75 0%, #ffffff 0%, #676767 0%, #000000 100%);
+      background: linear-gradient(135deg, #024e75 0%, #ffffff 0%, #676767 0%, #000000 100%);
+    }
 
   }
 
