--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -33,16 +33,19 @@
     max-width: 500px;
   }
 
-  .inset-block {
+  .inset-block, .markdown-inset-block {
     width: 100%;
     overflow: auto;
     display: block;
-    padding: $app-main-footer-padding;
     background-color: $survey-step-inset-block-background-color;
     font-weight: bold;
     color: $survey-step-inset-block-font-color;
     border-top: 1px solid $survey-step-inset-block-border-color;
     border-bottom: 1px solid $survey-step-inset-block-border-color;
+  }
+
+  .inset-block {
+    padding: $app-main-footer-padding;
   }
 
   textarea {
