--- a/www/blocks/custom/va/site/_survey-step.scss
+++ b/www/blocks/custom/va/site/_survey-step.scss
@@ -1,3 +1,21 @@
 .survey-step {
 
+  // survey navigation buttons
+  #prev-button, #next-button {
+    button {
+      border-radius: 5px;
+      border: 1px solid black;
+      padding-top: $global-form-control-padding;
+      padding-bottom: $global-form-control-padding;
+    }
+  }
+
+  #prev-button button {
+    background: $survey-step-prev-button-gradient;
+    color: white;
+  }
+  #next-button button {
+    background: $survey-step-next-button-gradient;
+    color: black;
+  }
 }
