make font color darker to improve contrast

--- a/www/blocks/custom/va/config/_page.scss
+++ b/www/blocks/custom/va/config/_page.scss
@@ -15,7 +15,7 @@ $info-region-header-height: $info-region-header-height * $scale_factor;
 $info-region-header-font-size: $info-region-header-font-size * $scale_factor;
 
 $survey-step-inset-block-background-color: #f8f8f8;
-$survey-step-inset-block-font-color: desaturate(#2797e0, 100%);
+$survey-step-inset-block-font-color: #111111;
 $survey-step-inset-block-border-color: desaturate(#2d9ce3, 100%);
 
 $list-icon-size: 2rem;
