remove unneeded left margin from button-region header

--- a/www/blocks/app/_header.scss
+++ b/www/blocks/app/_header.scss
@@ -62,8 +62,11 @@ body > header > div  {
     opacity: 0.85;
   }
 
-}
+  #button-region {
+    float: right;
+    button {
+      margin-left: 0;
+    }
+  }
 
-#button-region {
-  float: right;
 }
