--- a/www/blocks/custom/runstrong/config/_app.scss
+++ b/www/blocks/custom/runstrong/config/_app.scss
@@ -1,28 +1,29 @@
-$app-header-menu-header-icon-size: 1.2rem !default;
+$app-header-menu-header-icon-size: 1.2rem;
 
-$app-header-menu-header-border-color: #0054A6 !default;
-$app-header-menu-header-font-color: #F4C51A !default;
+$app-header-menu-header-border-color: #0054A6;
+$app-header-menu-header-font-color: #F4C51A;
 $app-header-menu-header-background-flat: #0054A6;
 $app-header-menu-header-background: #0054A6;
 
-$app-header-menu-header-list-background: #0054A6 !default;
-$app-header-menu-header-list-item-background: #003466 !default;
-$app-header-menu-header-list-item-hover-background: #0054A6 !default;
-$app-header-menu-header-list-item-active-background: #0054A6 !default;
-$app-header-menu-header-close-background-color: #003466 !default;
-$app-header-menu-list-border-color: #0054A6 !default;
-$app-header-menu-font-color: #F4C51A !default;
+$app-header-menu-header-list-background: #0054A6;
+$app-header-menu-header-list-item-background: #003466;
+$app-header-menu-header-list-item-hover-background: #0054A6;
+$app-header-menu-header-list-item-active-background: #0054A6;
+$app-header-menu-header-close-background-color: #003466;
+$app-header-menu-list-border-color: #0054A6;
+$app-header-menu-font-color: #F4C51A;
 
-$app-footer-background-color: #003466 !default;
+$app-footer-background-color: #003466;
 
 $app-header-background-flat: #0054A6;
 $app-header-background: #0054A6;
 $app-header-font-color: #F4C51A;
 
-$app-list-border-color: #0054A6 !default;
-$app-list-box-shadow: inset 0 2px 2px rgba(0,0,0,.05) !default;
-$app-list-hover-background-color: #0054A6 !default;
+$app-list-border-color: #0054A6;
+$app-list-box-shadow: inset 0 2px 2px rgba(0,0,0,.05);
+$app-list-hover-background-color: #1064B6;
 
-$app-background: #003466 !default;
+$app-background: #003466;
 
-$app-main-background: #003466 !default;
+$app-main-background: #003466;
+
