--- a/www/blocks/component/_full-modal.scss
+++ b/www/blocks/component/_full-modal.scss
@@ -43,17 +43,17 @@
   // transition effects
 
   visibility: hidden;
-  -webkit-transition: -webkit-transform 0.4s ease-in-out, visibility 0s 0.4s;
-  transition: transform 0.4s ease-in-out, visibility 0s 0.4s;
   -webkit-transform: translateY(100%);
   transform: translateY(100%);
+  -webkit-transition: -webkit-transform 0.4s cubic-bezier(.3,.11,.48,.93), visibility 0s 0.4s;
+  transition: transform 0.4s cubic-bezier(.3,.11,.48,.93), visibility 0s 0.4s;
 
   &.open {
     visibility: visible;
     -webkit-transform: translateY(0%);
     transform: translateY(0%);
-    -webkit-transition: -webkit-transform 0.4s ease-in-out;
-    transition: transform 0.4s ease-in-out;
+    -webkit-transition: -webkit-transform 0.4s cubic-bezier(.16,.65,.44,.99);
+    transition: transform 0.4s cubic-bezier(.16,.65,.44,.99);
   }
 
 }
