--- a/www/blocks/app/_menu.scss
+++ b/www/blocks/app/_menu.scss
@@ -14,6 +14,10 @@
       width: $app-header-menu-header-height;
       background-size: $app-header-menu-header-font-size $app-header-menu-header-font-size;
     }
+    .close:active {
+      background-color: lighten($app-header-menu-header-close-background-color, 5%);
+      outline: 0;
+    }
     h1 {
       font-size: $app-header-menu-header-font-size;
       line-height: $app-header-menu-header-height;
