make iOS header target new slide out overlay css class

--- a/www/blocks/app/_menu.scss
+++ b/www/blocks/app/_menu.scss
@@ -68,6 +68,6 @@
   top: $app-status-bar-offset;
 }
 
-.ios7 #app-menu .overlay {
+.ios7 #app-menu .slide-out-overlay {
   top: $app-status-bar-offset;
 }
