--- a/www/blocks/custom/runstrong/site/_icons.scss
+++ b/www/blocks/custom/runstrong/site/_icons.scss
@@ -102,7 +102,7 @@
   }
 
   &.edit {
-    background-image: url("../img/icon/edit.svg");
+    background-image: url("../img/icon/runstrong/settings.svg");
   }
 
   &.new-item {
