--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -99,8 +99,12 @@
       line-height: 1;
       font-size: $global-form-control-font-size;
       display: inline-block;
-      padding: $global-form-control-padding*2;
+      padding: 0 $global-form-control-padding*2;
       width: 100%;
+      p {
+        margin: 0;
+        padding: $global-form-control-padding*2 0;
+      }
     }
 
     button.delete {
