add step message css (and blank for empty h2)

--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -6,6 +6,17 @@
     }
   }
 
+  .step-message {
+    padding: $global-form-control-padding*2;
+    h2:empty {
+      display: none;
+    }
+    p {
+      margin: 0;
+      padding: $global-form-control-padding*2 0;
+    }
+  }
+
   .inline-error {
     font-size: $global-form-control-font-size*0.95;
     background-color: #FFDDEE;
