--- a/www/blocks/custom/va/config/_page.scss
+++ b/www/blocks/custom/va/config/_page.scss
@@ -20,12 +20,14 @@ $survey-step-inset-block-border-color: desaturate(#2d9ce3, 100%);
 
 $list-icon-size: 2rem;
 
-$survey-step-prev-button-background-color: desaturate(#e76453, 100%);
-$survey-step-next-button-background-color: desaturate(#56c68a, 100%);
+$survey-step-prev-button-background-color: desaturate(#56c68a, 100%);
+$survey-step-next-button-background-color: desaturate(#e76453, 100%);
 $survey-step-skip-button-background-color: desaturate(#dbdbdb, 100%);
 
 $survey-step-number-control-gradient: linear-gradient(to bottom, desaturate(#47c4ff, 100%) 0%, desaturate(#00aeff, 100%) 100%);
 
+$survey-step-prev-gradient-swatch: lighten(#b8b8b8, 5%);
+$survey-step-next-gradient-swatch: darken(#111111, 5%);
 
-$survey-step-prev-button-gradient: linear-gradient(to bottom, lighten(#111111,20%) 10%, #111111 100%);
-$survey-step-next-button-gradient: linear-gradient(to bottom, lighten(#b8b8b8,20%) 10%, #b8b8b8 100%);
+$survey-step-prev-button-gradient: linear-gradient(to bottom, lighten($survey-step-prev-gradient-swatch,20%) 10%, $survey-step-prev-gradient-swatch 100%);
+$survey-step-next-button-gradient: linear-gradient(to bottom, lighten($survey-step-next-gradient-swatch,20%) 10%, $survey-step-next-gradient-swatch 100%);
