update skip button appearance

--- a/www/blocks/custom/va/site/_survey-step.scss
+++ b/www/blocks/custom/va/site/_survey-step.scss
@@ -81,6 +81,17 @@
     }
   }
 
+  #skip-button {
+    button {
+      border-radius: 5px;
+      background: $survey-step-prev-button-gradient;
+      color: black;
+      border: 1px solid black;
+      padding-top: $global-form-control-padding;
+      padding-bottom: $global-form-control-padding;
+    }
+  }
+
   #prev-button {
     div::before {
       background-image: url('../img/icon/va/left-triangle-white.svg');
