lock the prompt labels to a single font size

--- a/www/blocks/custom/va/site/_survey-step.scss
+++ b/www/blocks/custom/va/site/_survey-step.scss
@@ -2,6 +2,9 @@
 
   .markdown-inset-block {
     font-size: $global-form-control-font-size * 1.1;
+  .prompt-list label {
+    font-size: 1rem;
+    padding: 0 1rem;
   }
 
   // photo prompt
