hide hamburger menu while survey is active to prevent fixed UI elements breaking menu

--- a/www/blocks/custom/va/site/_header.scss
+++ b/www/blocks/custom/va/site/_header.scss
@@ -1,3 +1,9 @@
 #page-title {
   .survey.icon { display: none; }
 }
+
+// hide the hamburger menu while survey is active
+// prevents fixed elements from breaking UI
+.survey-active .app-menu-trigger.hamburger.icon {
+  visibility: hidden;
+}
