add survey navigation height

--- a/www/blocks/custom/va/site/_survey-step.scss
+++ b/www/blocks/custom/va/site/_survey-step.scss
@@ -1,3 +1,5 @@
+$survey-navigation-height: $global-form-control-font-size*3.1;
+
 .survey-step {
 
   $base-inset-font-size: $global-form-control-font-size * 1.1;
