set min-height to survey navigation height

--- a/www/blocks/custom/va/site/_survey-step.scss
+++ b/www/blocks/custom/va/site/_survey-step.scss
@@ -167,7 +167,7 @@ $survey-navigation-height: $global-form-control-font-size*3.1;
       max-width: none;
     }
     position: relative;
-    min-height: $global-form-control-font-size*3.1;
+    min-height: $survey-navigation-height;
     .button-pair > * {
       position: absolute;
       right: 8px;
