add survey navigation with fixed position and step body bottom padding

--- a/www/blocks/custom/va/site/_survey-step.scss
+++ b/www/blocks/custom/va/site/_survey-step.scss
@@ -190,3 +190,15 @@ $survey-navigation-height: $global-form-control-font-size*3.1;
   }
 
 }
+
+.survey-active {
+// fixed position survey navigation
+
+  .inset-block.survey-navigation {
+    position: fixed;
+    bottom: 0;
+  }
+  #step-body {
+    padding-bottom: $survey-navigation-height;
+  }
+}
