--- a/www/sass/_palette.sass
+++ b/www/sass/_palette.sass
@@ -2,5 +2,10 @@
 
 +font-face("Open Sans Bold", font-files("opensans-bold.woff", "opensans-bold.ttf"), "opensans-bold.eot", 400)
 
++font-face("Fira Sans", font-files("firasans-regular.woff", "firasans-regular.ttf"), "firasans-regular.eot", 400)
+
++font-face("Fira Sans Bold", font-files("firasans-bold.woff", "firasans-bold.ttf"), "firasans-bold.eot", 400)
+
+
 .hidden
   display: none
