hide the header completely while survey is active

--- a/www/blocks/custom/va/site/_header.scss
+++ b/www/blocks/custom/va/site/_header.scss
@@ -2,8 +2,8 @@
   .survey.icon { display: none; }
 }
 
-// hide the hamburger menu while survey is active
+// hide the header and hamburger menu while survey is active
 // prevents fixed elements from breaking UI
-.survey-active .app-menu-trigger.hamburger.icon {
-  visibility: hidden;
+body.survey-active > header {
+  display: none;
 }
