--- a/www/blocks/custom/va/site/_survey-step.scss
+++ b/www/blocks/custom/va/site/_survey-step.scss
@@ -5,17 +5,22 @@ $survey-navigation-height: $global-form-control-font-size*3.1;
   $base-inset-font-size: $global-form-control-font-size * 1.1;
 
   #progress {
+    $progress-height: 1.3rem;
     height: 1em;
     progress {
       width: 90%;
     }
+    line-height: $progress-height;
     .raw-percentage {
       display: block;
       float: left;
       width: 10%;
-      line-height: 1em;
-      font-size: 1rem;
+      line-height: $progress-height;
+      font-size: 1em;
       padding-left: 0.5rem;
+    }
+    progress {
+      font-size: $progress-height;
     }
   }
 
@@ -201,4 +206,5 @@ $survey-navigation-height: $global-form-control-font-size*3.1;
   #step-body {
     padding-bottom: $survey-navigation-height;
   }
+
 }
